# shimmy_bot

./: CMakeLists.txt  README.md  package.xml
config/: config.ini  ekf.yaml  fake_laser.yaml  mapper_params_online_async.yaml  rtabmap.yaml  shimmy.yaml  zed_common.yaml
description/: d435.urdf.xacro  depth_sensor.urdf.xacro  robot.ros2_control.xacro  robot.urdf.xacro  robot_description.urdf.xacro  zed_macro.urdf.xacro
launch/: depth.launch.py  ekf.yaml  lasers.launch.py  rsp.launch.py  sensors.launch.py  shimmy_bot.launch.py
scripts/: nav_to_pose.py
